# hyperstack-mcp-server

./: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
scripts/: mcp_handshake.sh
src/: config.py  exceptions.py  mcp_instance.py  server.py
src/client/: __init__.py  base.py  hyperstack.py
src/handlers/: base.py  billing.py  clusters.py  metadata.py  virtual_machines.py  volumes.py
src/models/: base.py  billing.py  clusters.py  errors.py  metadata.py  virtual_machines.py  volumes.py
src/utils/: request_utils.py
